Details
-
Bug
-
Resolution: Fixed
-
Major
-
x86 real hardware.
-
0.4.13-dev-1081-geeff926ede1b2109bb0e129a960b74f3261cf2f1
Description
This problem happens only on 1 of my 3 PCs with the following configuration:
Motherboard: Asus-A7V8X-X;
CPU: AMD Athlon XP 2200+ 1,8 GHz (without SSE2 support);
RAM: 2 GB DDR1 400 MHz;
GPU: ATI Radeon 9600 128 MB vRAM (AGP);
HDD: WDC WD2000JB-00GVC0 (IDE);
CD-ROM: HL-DT-ST DVDRAM GSA-4167B (ATAPI);
Audio: VIA 8235 (AC97);
LAN: VIA Rhine II Fast Ethernet;
WLAN: Dlink DWA-525 Rev A2 (PCI).
Other 2 PCs are not affected.
0.4.13-dev-1079-gb16ca9cd65c0279ef35dff5e0f0d733d7f1c77e4 - the system doesn't hang during opening My Computer.
0.4.13-dev-1080-g4843c1a954c0ef1973a2e0710e646912ee6053c3, 0.4.13-dev-1081-geeff926ede1b2109bb0e129a960b74f3261cf2f1, 0.4.13-dev-1082-ga9411fb658f204fdb7b7681dcbbd35b0553e7451 - I didn't test these builds for now, because they are missing on ReactOS website, but one of that commits definitely is guilty. I can to build them manually later.
0.4.13-dev-1083-ga4ca5f05d166c7918d54d6d591be66f8742fdfb7 - after trying to open My Computer, when detecting the drives, the system immediately hangs with assert. If to ignore the first assert, appears one more, and after a lot of ignores, the system crashes to BSOD 0x7e. If to break it once or repeatedly, then after bt and cont, asserts appear again by the same way.
But there is the one problem: I got the log in logfile mode, because I don't have a null-modem cable, but due to FS corruption caused by system crash, it's not full. I don't see so don't know which asserts have appeared. But I guess that it was some in Freeldr, since all 3 potentially guilty commits was made into this component.
In screen mode debug output is not visible after booting into desktop, so this is not an option too. I don't know what else can I do. Sorry. ![]()
Attachments
Issue Links
- is duplicated by
-
CORE-16523 Kernel immediately locks up upon opening Explorer
-
- Resolved
-