[0.4.13][FREELDR] Workaround regression CORE-16469

This prevents ReactOS asserting when 'My computer'
is opened, while it tries to send commands to floppy drive.

Many thanks to patches author Doug Lyons.

The regression was introduced by 0.4.13-dev-1081-g
eeff926ede1b2109bb0e129a960b74f3261cf2f1

patch was not committed to master yet,
hbelusca continues investigation